# Chaste

./: CITATION.cff  CMakeLists.txt
.devcontainer/: devcontainer.json
.github/workflows/: pychaste-conda-tests.yml  pychaste-tests.yml  pychaste-ubuntu-tests.yml  update-pychaste-tutorials.yml
cell_based/src/simulation/modifiers/: GPUModifier.cu  GPUModifier.cuh
cell_based/test/: ContinuousTestPack.txt
cell_based/test/simulation/: TestFlameGPU2.cuh
cmake/: flamegpu2.cmake
cmake/Modules/: ChasteMacros.cmake
continuum_mechanics/test/: TestSolvingElasticityProblemsTutorial.hpp
docs/licencing/: Licences.html
heart/test/monodomain/: TestNiederer2011BenchmarkSimulation.hpp
pychaste/: CMakeLists.txt
pychaste/dynamic/: config.yaml
pychaste/dynamic/wrappers/all/: AbstractBoundaryCondition_2.cppwg.cpp  AbstractBoundaryCondition_3.cppwg.cpp  AbstractBoxDomainPdeModifier_2.cppwg.cpp  AbstractBoxDomainPdeModifier_3.cppwg.cpp  AbstractCaBasedDivisionRule_2.cppwg.cpp  AbstractCaBasedDivisionRule_3.cppwg.cpp  AbstractCaSwitchingUpdateRule_2.cppwg.cpp  AbstractCaSwitchingUpdateRule_3.cppwg.cpp  AbstractCaUpdateRule_2.cppwg.cpp  AbstractCaUpdateRule_3.cppwg.cpp  AbstractCellBasedSimulationModifier_2_2.cppwg.cpp  AbstractCellBasedSimulationModifier_3_3.cppwg.cpp  AbstractCellBasedSimulation_2_2.cppwg.cpp  AbstractCellBasedSimulation_3_3.cppwg.cpp  AbstractCellBasedWriter_2_2.cppwg.cpp  AbstractCellBasedWriter_3_3.cppwg.cpp  AbstractCellCycleModel.cppwg.cpp  AbstractCellCycleModelOdeSolver.cppwg.cpp  AbstractCellKiller_2.cppwg.cpp  AbstractCellKiller_3.cppwg.cpp  AbstractCellMutationState.cppwg.cpp  AbstractCellPopulationBoundaryCondition_2_2.cppwg.cpp  AbstractCellPopulationBoundaryCondition_3_3.cppwg.cpp  AbstractCellPopulationCountWriter_2_2.cppwg.cpp  AbstractCellPopulationCountWriter_3_3.cppwg.cpp  AbstractCellPopulationEventWriter_2_2.cppwg.cpp  AbstractCellPopulationEventWriter_3_3.cppwg.cpp  AbstractCellPopulationWriter_2_2.cppwg.cpp  AbstractCellPopulationWriter_3_3.cppwg.cpp  AbstractCellPopulation_2_2.cppwg.cpp  AbstractCellPopulation_3_3.cppwg.cpp  AbstractCellProliferativeType.cppwg.cpp  AbstractCellProperty.cppwg.cpp  AbstractCellWriter_2_2.cppwg.cpp  AbstractCellWriter_3_3.cppwg.cpp  AbstractCentreBasedCellPopulation_2_2.cppwg.cpp  AbstractCentreBasedCellPopulation_3_3.cppwg.cpp  AbstractCentreBasedDivisionRule_2_2.cppwg.cpp  AbstractCentreBasedDivisionRule_3_3.cppwg.cpp  AbstractChasteRegion_2.cppwg.cpp  (+458 more)
pychaste/src/cpp/visualization/: CellPopulationPyChasteActorGenerator.cpp
pychaste/src/py/chaste/: _syntax.py
pychaste/src/py/chaste/cell_based/: __init__.py
pychaste/src/py/chaste/mesh/: __init__.py
pychaste/src/py/chaste/pde/: __init__.py
pychaste/src/py/chaste/visualization/: __init__.py
pychaste/src/py/doc/tutorial/: CellSorting.ipynb  CellSorting.md  ImmersedBoundary.ipynb  ImmersedBoundary.md  MeshBasedCellSimulations.ipynb  MeshBasedCellSimulations.md  NodeBasedCellSimulations.ipynb  NodeBasedCellSimulations.md  PottsBasedCellSimulations.ipynb  PottsBasedCellSimulations.md  ScratchAssay.ipynb  ScratchAssay.md  Spheroid.ipynb  Spheroid.md  TensileTest.ipynb  TensileTest.md  VertexBasedCellSimulations.ipynb  VertexBasedCellSimulations.md
pychaste/test/: CMakeLists.txt  ContinuousTestPack.txt
pychaste/test/core/: TestPyImports.py  TestPyWrapperChanges.py
pychaste/test/tutorial/: TestPyCellSortingTutorial.py  TestPyImmersedBoundaryTutorial.py  TestPyMeshBasedCellSimulationsTutorial.py  TestPyNodeBasedCellSimulationsTutorial.py  TestPyPottsBasedCellSimulationsTutorial.py  TestPyScratchAssayTutorial.py  TestPySpheroidTutorial.py  TestPyTensileTestTutorial.py  TestPyVertexBasedCellSimulationsTutorial.py
